# glomgold-gateway

./: LICENSE  README.md  pyproject.toml
src/acquiring/domain/: __init__.py  payment.py  paymentprocessor.py  processor.py
src/acquiring/domain/stub_processor/: stub_processor.py
test/: helpers.py  test_behaviour.py
