[tool.poetry]
name = "glomgold-gateway"
version = "0.1.0"
description = ""
authors = ["Ken Mijime <kenaco666@gmail.com>"]
readme = "README.md"
packages = [{include = "glomgold_gateway"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
