[tool.poetry]
name = "glomgold-gateway"
version = "0.1.0"
description = ""
authors = ["Ken Mijime <kenaco666@gmail.com>"]
readme = "README.md"
packages = [{include = "glomgold_gateway"}]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 120
